<resources>
    <string name="app_name">Projet</string>
    <string name="modifier">Modifier</string>
    <string name="fait">Fait!</string>
    <string name="add">+</string>
    <string name="ajouter">Ajouter</string>
    <string name="id">Id</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="empty">Empty</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="setAlarm">Set Alarm</string>

    <string name="oneDay">1 Day Before</string>
    <string name="twoDays">2 Days Before</string>
    <string name="weekBefore">1 Week Before</string>

    <string name="pickDate">Pick Date</string>
    <string name="pickTime">Pick Time</string>
    <string name="googleMap">Google Map</string>

    <string-array name="choices">
        <item>1 Day Before</item>
        <item>2 Days Before</item>
        <item>1 Week Before</item>
    </string-array>
</resources>